# cloudops-Orchestrator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/api/v1/: cloud.py  infrastructure.py  kubernetes.py  monitoring.py
app/core/: config.py  database.py  errors.py  logging.py  middleware.py
app/models/: cloud_resources.py  kubernetes_resources.py  operations.py
app/schemas/: cloud.py  infrastructure.py  kubernetes.py
app/services/cloud/: aws_service.py  azure_service.py  gcp_service.py  openstack_service.py
app/services/infrastructure/: terraform_wrapper.py
app/services/providers/: base.py
deployments/helm/cloudops-orchestrator/: Chart.yaml
deployments/kubernetes/: deployment.yaml  ingress.yaml  service.yaml
docs/lesson/: CloudOps_Orchestrator_Lesson.md  CloudOps_Orchestrator_Lesson.txt
monitoring/: docker-compose.monitoring.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: api.alerts.yaml
operators/: Dockerfile
operators/application_operator/: main.py  rbac.yaml
operators/application_operator/resources/: application.crd.yaml
requirements/: base.txt  dev.txt
scripts/: build.sh  deploy.sh  setup.sh
terraform/environments/dev/: backend.tf
terraform/environments/prod/: backend.tf
terraform/modules/aws/: main.tf
worker/: celery_app.py
worker/tasks/: terraform.py
(+4 files in other folders)
